--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "npx vite-node src/index.ts"
   },
   "dependencies": {
-    "@types/node": "^24.2.1",
     "vite-node": "^3.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0"
   }
 }
